# bom-common

./: cli_plugins.yaml  pyproject.toml
bom_common/: __main__.py
bom_common/pipeline/: config_serial.py  library_config.py
bom_common/pluggable_cli/: __init__.py  cli.py  plugin.py
tests/: test_module.py
tests/integration/: test_plugin.py
